// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly with pageTitle 1`] = `
<DocumentFragment>
  .emotion-0 {
  font-size: 13px;
}

.emotion-0 a {
  color: #5C6C75;
}

.emotion-1 {
  margin: unset;
  font-family: Akzidenz,'Helvetica Neue',Helvetica,Arial,sans-serif;
  color: #21313C;
  font-size: 14px;
  line-height: 20px;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  font-weight: 400;
}

.emotion-2 {
  font-size: 13px;
}

.emotion-2:last-of-type {
  color: #1C2D38;
}

.emotion-2:hover,
.emotion-2:focus {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-2:hover:not(:last-of-type),
.emotion-2:focus:not(:last-of-type) {
  color: #1C2D38;
}

.emotion-4 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #007CAD;
  cursor: pointer;
  font-size: 14px;
  line-height: 20px;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
}

.emotion-4:focus {
  outline: none;
}

.emotion-5 {
  background-repeat: repeat-x;
  background-size: 2px 2px;
  background-position: center bottom;
}

[data-leafygreen-ui="anchor-container"]:hover .emotion-5 {
  background-image: linear-gradient( #E7EEEC 100%, #E7EEEC 0 );
}

[data-leafygreen-ui="anchor-container"]:focus .emotion-5 {
  background-image: linear-gradient( to right, #9DD0E7 100%, #9DD0E7 0 );
}

.emotion-6 {
  cursor: default;
}

.emotion-6:last-of-type {
  color: #1C2D38;
}

.emotion-9 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  position: relative;
  -webkit-text-decoration: none!important;
  text-decoration: none!important;
  line-height: 13px;
  outline: none;
  color: #016BF8;
  font-size: 13px;
}

.emotion-9:focus {
  outline: none;
}

.emotion-9>code {
  color: #016BF8;
}

.emotion-9::after {
  content: '';
  position: absolute;
  width: 100%;
  height: 2px;
  bottom: -4px;
  left: 0;
  border-radius: 2px;
}

.emotion-9:focus .emotion-9::after {
  background-color: #0498EC;
}

.emotion-9:hover::after {
  background-color: #E8EDEB;
}

.emotion-9:last-of-type {
  color: #1C2D38;
}

.emotion-9:hover,
.emotion-9:focus {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-9:hover:not(:last-of-type),
.emotion-9:focus:not(:last-of-type) {
  color: #1C2D38;
}

<div
    class="emotion-0 emotion-1"
  >
    <a
      class="emotion-2 emotion-3 emotion-4"
      data-leafygreen-ui="anchor-container"
      href="https://www.mongodb.com/docs/"
      rel="noopener noreferrer"
      target="_blank"
    >
      <span
        class="emotion-5"
      >
        Docs Home
      </span>
    </a>
    <span
      class="emotion-6 emotion-7"
    >
       → 
    </span>
    <a
      class="emotion-3 emotion-9 emotion-10"
      href="/view-analyze/"
    >
      View & Analyze Data
    </a>
  </div>
</DocumentFragment>
`;

exports[`renders correctly with siteTitle 1`] = `
<DocumentFragment>
  .emotion-0 {
  font-size: 13px;
}

.emotion-0 a {
  color: #5C6C75;
}

.emotion-1 {
  margin: unset;
  font-family: Akzidenz,'Helvetica Neue',Helvetica,Arial,sans-serif;
  color: #21313C;
  font-size: 14px;
  line-height: 20px;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  font-weight: 400;
}

.emotion-2 {
  font-size: 13px;
}

.emotion-2:last-of-type {
  color: #1C2D38;
}

.emotion-2:hover,
.emotion-2:focus {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-2:hover:not(:last-of-type),
.emotion-2:focus:not(:last-of-type) {
  color: #1C2D38;
}

.emotion-4 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #007CAD;
  cursor: pointer;
  font-size: 14px;
  line-height: 20px;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
}

.emotion-4:focus {
  outline: none;
}

.emotion-5 {
  background-repeat: repeat-x;
  background-size: 2px 2px;
  background-position: center bottom;
}

[data-leafygreen-ui="anchor-container"]:hover .emotion-5 {
  background-image: linear-gradient( #E7EEEC 100%, #E7EEEC 0 );
}

[data-leafygreen-ui="anchor-container"]:focus .emotion-5 {
  background-image: linear-gradient( to right, #9DD0E7 100%, #9DD0E7 0 );
}

.emotion-6 {
  cursor: default;
}

.emotion-6:last-of-type {
  color: #1C2D38;
}

.emotion-9 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  position: relative;
  -webkit-text-decoration: none!important;
  text-decoration: none!important;
  line-height: 13px;
  outline: none;
  color: #016BF8;
  font-size: 13px;
}

.emotion-9:focus {
  outline: none;
}

.emotion-9>code {
  color: #016BF8;
}

.emotion-9::after {
  content: '';
  position: absolute;
  width: 100%;
  height: 2px;
  bottom: -4px;
  left: 0;
  border-radius: 2px;
}

.emotion-9:focus .emotion-9::after {
  background-color: #0498EC;
}

.emotion-9:hover::after {
  background-color: #E8EDEB;
}

.emotion-9:last-of-type {
  color: #1C2D38;
}

.emotion-9:hover,
.emotion-9:focus {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-9:hover:not(:last-of-type),
.emotion-9:focus:not(:last-of-type) {
  color: #1C2D38;
}

<div
    class="emotion-0 emotion-1"
  >
    <a
      class="emotion-2 emotion-3 emotion-4"
      data-leafygreen-ui="anchor-container"
      href="https://www.mongodb.com/docs/"
      rel="noopener noreferrer"
      target="_blank"
    >
      <span
        class="emotion-5"
      >
        Docs Home
      </span>
    </a>
    <span
      class="emotion-6 emotion-7"
    >
       → 
    </span>
    <a
      class="emotion-3 emotion-9 emotion-10"
      href="/"
    >
      MongoDB Compass
    </a>
  </div>
</DocumentFragment>
`;
